Add graphicx package to include images

--- a/thesis.tex
+++ b/thesis.tex
@@ -14,6 +14,7 @@
 \usepackage{fancyhdr}
 \usepackage{subfiles}
 \usepackage{hyperref}
+\usepackage{graphicx}
 \usepackage{lipsum}
 \usepackage[
   backend=biber,
