Finish IO module refactor in chap02

--- a/ref.bib
+++ b/ref.bib
@@ -1,3 +1,10 @@
+@software{AxboeFlexibleIOTester2022,
+  author = {Axboe, Jens},
+  title  = {{Flexible I/O Tester}},
+  url    = {https://github.com/axboe/fio},
+  year   = {2022}
+}
+
 @inproceedings{papagiannis2020optimizing,
   title     = {Optimizing Memory-mapped I/O for Fast Storage Devices},
   author    = {Papagiannis, Anastasios and Xanthakis, Giorgos and Saloustros, Giorgos and Marazakis, Manolis and Bilas, Angelos},
