--- a/frontmatters/titlepage.tex
+++ b/frontmatters/titlepage.tex
@@ -27,7 +27,7 @@
       {\large
         논문심사 대상자 소속:\hfill 자연과학대학 생명과학부 \hfill \phantom{(인)} \par
         \phantom{논문심사 대상자} 학번: \hfill \@studentid \hfill \phantom{(인)} \par
-        \phantom{논문심사 대상자} 성명: \hfill \@author \hfill (인) \par
+        \phantom{논문심사 대상자}\ 성명: \hfill \@author \hfill (인) \par
         \par
         논문지도교수: \hfill \@advisor \hfill (인)
       }
