Apply 1.6 times line spacing

--- a/thesis.tex
+++ b/thesis.tex
@@ -9,6 +9,7 @@
 ]{geometry}
 \usepackage{fontspec}
 \usepackage{kotex} % Korean support
+% \usepackage{xeCJK}
 \usepackage{datetime2}
 \usepackage{setspace} % Set spacing
 \usepackage{titlesec}
@@ -29,6 +30,21 @@
 \usepackage{subcaption}
 \usepackage{algorithm}
 \usepackage{algpseudocode}
+% \setmainfont[
+%   BoldFont=Noto Serif Bold,
+%   ItalicFont=Noto Serif Italic,
+%   BoldItalicFont=Noto Serif Bold Italic,
+%   SmallCapsFont=Noto Sans SC
+% ]{Noto Serif}
+
+% \setmainhangulfont[
+%   SmallCapsFont=Alegreya SC
+% ]{NanumMyeongjo}
+% \sethangulsansfont{Noto Sans KR}
+% \sethangulmonofont{Noto Sans Mono}
+
+% \spaceskip=0.5em
+
 \usepackage{etoolbox}
 
 \AtBeginEnvironment{algorithm}{
@@ -196,6 +212,7 @@
 %%
 % \usepackage{setspace}
 \SetSinglespace{1.6}
+\singlespacing
 
 %%
 %% Basic document info
