Finish benchmark part of chapter02

--- a/ref.bib
+++ b/ref.bib
@@ -5,6 +5,41 @@
   year   = {2022}
 }
 
+@article{axtmann2017place,
+  title   = {In-place Parallel Super Scalar Samplesort (IPS $\^{} 4$ o)},
+  author  = {Axtmann, Michael and Witt, Sascha and Ferizovic, Daniel and Sanders, Peter},
+  journal = {arXiv preprint arXiv:1705.02257},
+  year    = {2017}
+}
+
+@incollection{eddy2009new,
+  title     = {A new generation of homology search tools based on probabilistic inference},
+  author    = {Eddy, Sean R},
+  booktitle = {Genome Informatics 2009: Genome Informatics Series Vol. 23},
+  pages     = {205--211},
+  year      = {2009},
+  publisher = {World Scientific}
+}
+
+@article{eddy2011accelerated,
+  title     = {Accelerated profile HMM searches},
+  author    = {Eddy, Sean R},
+  journal   = {PLoS computational biology},
+  volume    = {7},
+  number    = {10},
+  pages     = {e1002195},
+  year      = {2011},
+  publisher = {Public Library of Science San Francisco, USA}
+}
+
+@article{liu2021block,
+  title     = {Block aligner: fast and flexible pairwise sequence alignment with SIMD-accelerated adaptive blocks},
+  author    = {Liu, Daniel and Steinegger, Martin},
+  journal   = {bioRxiv},
+  year      = {2021},
+  publisher = {Cold Spring Harbor Laboratory}
+}
+
 @inproceedings{papagiannis2020optimizing,
   title     = {Optimizing Memory-mapped I/O for Fast Storage Devices},
   author    = {Papagiannis, Anastasios and Xanthakis, Giorgos and Saloustros, Giorgos and Marazakis, Manolis and Bilas, Angelos},
@@ -13,59 +48,57 @@
   year      = {2020}
 }
 
-@article{axtmann2017place,
-  title={In-place Parallel Super Scalar Samplesort (IPS $\^{} 4$ o)},
-  author={Axtmann, Michael and Witt, Sascha and Ferizovic, Daniel and Sanders, Peter},
-  journal={arXiv preprint arXiv:1705.02257},
-  year={2017}
-}
-
-@article{liu2021block,
-  title={Block aligner: fast and flexible pairwise sequence alignment with SIMD-accelerated adaptive blocks},
-  author={Liu, Daniel and Steinegger, Martin},
-  journal={bioRxiv},
-  year={2021},
-  publisher={Cold Spring Harbor Laboratory}
-}
-
-@incollection{eddy2009new,
-  title={A new generation of homology search tools based on probabilistic inference},
-  author={Eddy, Sean R},
-  booktitle={Genome Informatics 2009: Genome Informatics Series Vol. 23},
-  pages={205--211},
-  year={2009},
-  publisher={World Scientific}
-}
-
-@article{eddy2011accelerated,
-  title={Accelerated profile HMM searches},
-  author={Eddy, Sean R},
-  journal={PLoS computational biology},
-  volume={7},
-  number={10},
-  pages={e1002195},
-  year={2011},
-  publisher={Public Library of Science San Francisco, USA}
-}
-
 @article{remmert2012hhblits,
-  title={HHblits: lightning-fast iterative protein sequence searching by HMM-HMM alignment},
-  author={Remmert, Michael and Biegert, Andreas and Hauser, Andreas and S{\"o}ding, Johannes},
-  journal={Nature methods},
-  volume={9},
-  number={2},
-  pages={173--175},
-  year={2012},
-  publisher={Nature Publishing Group}
+  title     = {HHblits: lightning-fast iterative protein sequence searching by HMM-HMM alignment},
+  author    = {Remmert, Michael and Biegert, Andreas and Hauser, Andreas and S{\"o}ding, Johannes},
+  journal   = {Nature methods},
+  volume    = {9},
+  number    = {2},
+  pages     = {173--175},
+  year      = {2012},
+  publisher = {Nature Publishing Group}
 }
 
 @article{steinegger2019hh,
-  title={HH-suite3 for fast remote homology detection and deep protein annotation},
-  author={Steinegger, Martin and Meier, Markus and Mirdita, Milot and V{\"o}hringer, Harald and Haunsberger, Stephan J and S{\"o}ding, Johannes},
-  journal={BMC bioinformatics},
-  volume={20},
-  number={1},
-  pages={1--15},
-  year={2019},
-  publisher={BioMed Central}
+  title     = {HH-suite3 for fast remote homology detection and deep protein annotation},
+  author    = {Steinegger, Martin and Meier, Markus and Mirdita, Milot and V{\"o}hringer, Harald and Haunsberger, Stephan J and S{\"o}ding, Johannes},
+  journal   = {BMC bioinformatics},
+  volume    = {20},
+  number    = {1},
+  pages     = {1--15},
+  year      = {2019},
+  publisher = {BioMed Central}
+}
+
+@article{steinegger2019protein,
+  title     = {Protein-level assembly increases protein sequence recovery from metagenomic samples manyfold},
+  author    = {Steinegger, Martin and Mirdita, Milot and S{\"o}ding, Johannes},
+  journal   = {Nature methods},
+  volume    = {16},
+  number    = {7},
+  pages     = {603--606},
+  year      = {2019},
+  publisher = {Nature Publishing Group}
+}
+
+@article{uniprot2019uniprot,
+  title     = {UniProt: a worldwide hub of protein knowledge},
+  author    = {UniProt Consortium},
+  journal   = {Nucleic acids research},
+  volume    = {47},
+  number    = {D1},
+  pages     = {D506--D515},
+  year      = {2019},
+  publisher = {Oxford University Press}
+}
+
+@article{hauserbioinformaticsbtw006,
+  author   = {Hauser, Maria and Steinegger, Martin and Söding, Johannes},
+  title    = {{MMseqs software suite for fast and deep clustering and searching of large protein sequence sets}},
+  journal  = {Bioinformatics},
+  volume   = {32},
+  number   = {9},
+  pages    = {1323-1330},
+  year     = {2016},
+  month    = {01},
 }
