--- a/thesis.tex
+++ b/thesis.tex
@@ -20,7 +20,7 @@
 \usepackage{lipsum}
 \usepackage[
   backend=biber,
-  style=apa
+  style=ieee
 ]{biblatex}
 \usepackage[indent=0pt]{parskip}
 \usepackage{hyperref}
