Finish chapter01. introduction

--- a/ref.bib
+++ b/ref.bib
@@ -93,12 +93,75 @@
 }
 
 @article{hauserbioinformaticsbtw006,
-  author   = {Hauser, Maria and Steinegger, Martin and Söding, Johannes},
-  title    = {{MMseqs software suite for fast and deep clustering and searching of large protein sequence sets}},
-  journal  = {Bioinformatics},
-  volume   = {32},
-  number   = {9},
-  pages    = {1323-1330},
-  year     = {2016},
-  month    = {01},
+  author  = {Hauser, Maria and Steinegger, Martin and Söding, Johannes},
+  title   = {{MMseqs software suite for fast and deep clustering and searching of large protein sequence sets}},
+  journal = {Bioinformatics},
+  volume  = {32},
+  number  = {9},
+  pages   = {1323-1330},
+  year    = {2016},
+  month   = {01}
+}
+
+@incollection{levi2018searching,
+  title     = {Searching the sequence read archive using Jetstream and Wrangler},
+  author    = {Levi, Kyle and Rynge, Mats and Abeysinghe, Eroma and Edwards, Robert A},
+  booktitle = {Proceedings of the practice and experience on advanced research computing},
+  pages     = {1--7},
+  year      = {2018}
+}
+
+@article{altschul1990basic,
+  title     = {Basic local alignment search tool},
+  author    = {Altschul, Stephen F and Gish, Warren and Miller, Webb and Myers, Eugene W and Lipman, David J},
+  journal   = {Journal of molecular biology},
+  volume    = {215},
+  number    = {3},
+  pages     = {403--410},
+  year      = {1990},
+  publisher = {Elsevier}
+}
+
+@article{steinegger2017mmseqs2,
+  title     = {MMseqs2 enables sensitive protein sequence searching for the analysis of massive data sets},
+  author    = {Steinegger, Martin and S{\"o}ding, Johannes},
+  journal   = {Nature biotechnology},
+  volume    = {35},
+  number    = {11},
+  pages     = {1026--1028},
+  year      = {2017},
+  publisher = {Nature Publishing Group}
+}
+
+@article{buchfink2015fast,
+  title     = {Fast and sensitive protein alignment using DIAMOND},
+  author    = {Buchfink, Benjamin and Xie, Chao and Huson, Daniel H},
+  journal   = {Nature methods},
+  volume    = {12},
+  number    = {1},
+  pages     = {59--60},
+  year      = {2015},
+  publisher = {Nature Publishing Group}
+}
+
+@article{bradley2019ultrafast,
+  title     = {Ultrafast search of all deposited bacterial and viral genomic data},
+  author    = {Bradley, Phelim and Den Bakker, Henk C and Rocha, Eduardo PC and McVean, Gil and Iqbal, Zamin},
+  journal   = {Nature biotechnology},
+  volume    = {37},
+  number    = {2},
+  pages     = {152--159},
+  year      = {2019},
+  publisher = {Nature Publishing Group}
+}
+
+@article{henikoff1992amino,
+  title     = {Amino acid substitution matrices from protein blocks},
+  author    = {Henikoff, Steven and Henikoff, Jorja G},
+  journal   = {Proceedings of the National Academy of Sciences},
+  volume    = {89},
+  number    = {22},
+  pages     = {10915--10919},
+  year      = {1992},
+  publisher = {National Acad Sciences}
 }
