Use bold font for caption labels

--- a/thesis.tex
+++ b/thesis.tex
@@ -189,6 +189,12 @@
 %%
 
 %%
+%% Set up captions styles
+%%
+
+\captionsetup[figure]{labelfont={bf}, labelformat={default}}
+
+%%
 %% Set up figure environment
 %%
 \newenvironment{figpage}{
