--- a/thesis.tex
+++ b/thesis.tex
@@ -33,6 +33,8 @@
 % \usepackage{Alegreya}
 \usepackage{lmodern}
 \usepackage{enumitem}
+\usepackage{multirow}
+\usepackage[table,xcdraw]{xcolor}
 % \setmainfont{cm}
 
 \parskip=16pt
@@ -193,18 +195,19 @@
 %%
 
 \captionsetup[figure]{labelfont={bf}, labelformat={default}}
+\captionsetup[table]{labelfont={bf}, labelformat={default}}
 
 %%
 %% Set up figure environment
 %%
 \newenvironment{figpage}{
-  \clearpage
+  % \clearpage
   \SetSinglespace{1.2}
   \addtocounter{page}{-1}
   \thispagestyle{empty}
     }{
   \SetSinglespace{1.4}
-  \clearpage
+  % \clearpage
 }
 
 %%
@@ -258,13 +261,14 @@
 
 %% Start of chapters
 \subfile{chapters/01_introduction.tex}
+\pagebreak
 \subfile{chapters/02_materials_and_methods.tex}
+\pagebreak
 \subfile{chapters/03_results.tex}
+\pagebreak
 \subfile{chapters/04_discussion.tex}
-
 \pagebreak
 
 \printbibliography[heading=bibnumbered, title={References}]
-\thispagestyle{empty}
 
 \end{document}
